feat(photon): completely rewrite bestCamera system
now using a mapping system with a best result pair